# pypackaging-tekkie-tea

./: .gitignore  .gitmodules
pycloudchecker/cloudchecker/: ChangeLog  README.rst  setup.cfg
pycloudchecker/cloudchecker/checker/: __main__.py  runner.py
pycloudchecker/cloudchecker/checker/checks/: elb.py
pycloudchecker/cloudchecker/checker/resoures/: connection.py  elb.py
pycloudchecker/cloudchecker/tests/: test_check.py
v1-simple-script/: aws-sg-checker.py
v2-main-script/: __main__.py  check
v3-basic-package/: setup.py
v3-basic-package/elbchecker/: __main__.py  lib.py
v5-plugins-entrypoint/v5-02-checks-package/: setup.py
v5-plugins-entrypoint/v5-02-checks-package/ec2checks/: lib.py
v6-plugins-namespace-package/v6-02-checks-package/: setup.py
v7-this-and-that/: v5-plugins-entrypoint
