[metadata]
name = elbchecker
author = nassim babaci
author-email = nassim.babaci@cloudreach.co.uk
summary = Smoke tests for aws elb.
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: AWS
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    cloudchecker

[entry_points]
console_scripts =
    cloudchecker = checker.__main__:main

cloudchecker.checks =
    crosszone  = checker.checks.elb:check_elb_cross_zone
    azs        = checker.checks.elb:check_elb_azs

cloudchecker.resources =
    session    = checker.resources.connection:get_session
    elb        = checker.resources.elb:iter_elb


[extras]
dev =
    pytest
